[package]
name = "playdate-ui-crank-indicator"
version = "0.1.7"
readme = "README.md"
description = "Crank Indicator UI component."
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
sys = { workspace = true, default-features = false }
system = { workspace = true, default-features = false }
display = { workspace = true, default-features = false }
gfx = { workspace = true, default-features = false }
sprite = { workspace = true, default-features = false }


[dev-dependencies]
menu = { workspace = true, default-features = false }


[[example]]
name = "example"
crate-type = ["dylib", "staticlib"]
path = "examples/example.rs"
required-features = ["sys/lang-items", "sys/entry-point", "system/try-trait-v2"]


[package.metadata.playdate]
bundle-id = "rs.playdate.ui.crank.indicator"

[package.metadata.playdate.assets]
"ui/crank-ind/" = "${PLAYDATE_SDK_PATH}/CoreLibs/assets/crank/*.png"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples", "-Zbuild-std=core,alloc"]
