[package]
name = "playdate-symbolize"
version = "0.1.3"
readme = "README.md"
description = "Tools for symbolise addresses from bin (pdex.elf) and Playdate's trace or crashlog."
keywords = ["playdate", "bin", "elf", "addr2line", "utility"]
categories = ["development-tools", "command-line-utilities"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[[bin]]
name = "pd-addr2line"
path = "src/addr2line.rs"
required-features = ["clap", "env_logger", "const-str"]

[[bin]]
name = "pd-symbolize-trace"
path = "src/addr2line-trace.rs"
required-features = ["clap", "env_logger", "const-str"]

[[bin]]
name = "pd-symbolize-crashlog"
path = "src/addr2line-crashlog.rs"
required-features = ["clap", "env_logger", "const-str"]


[dependencies]
anyhow = "1.0"
log.workspace = true
env_logger = { workspace = true, optional = true }
symbolic = { version = "12.8", features = ["demangle"] }

regex.workspace = true
const-str = { version = "0.5", default-features = false, optional = true }

tokio = { workspace = true, features = ["full", "rt-multi-thread"] }
async-stream = "0.3"
tokio-stream = "0.1"
futures-util = "0.3"

[dependencies.clap]
features = ["std", "env", "derive", "help", "usage", "color"]
workspace = true
optional = true

[dependencies.rusqlite]
version = "0.31"
features = ["bundled"]

[dependencies.utils]
features = ["log"]
default-features = false
workspace = true


[features]
default = ["clap", "env_logger", "const-str", "sqlite-bundled"]
sqlite-bundled = ["rusqlite/bundled"]
