[package]
name = "playdate-bindgen-cfg"
version = "0.1.6"
readme = "README.md"
description = "Minimal configuration for playdate-bindgen."
keywords = ["playdate", "bindings", "ffi", "code-generation"]
categories = ["development-tools::ffi", "development-tools::build-utils"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies.clap]
features = ["std", "env", "derive", "help"]
workspace = true
optional = true


[features]
default = []


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--show-type-layout"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[badges.maintenance]
status = "actively-developed"
