[package]
name = "playdate-bindgen-cfg"
version = "0.4.0"
readme = "README.md"
description = "Minimal configuration end cli-executor for playdate-bindgen."
keywords = ["playdate"]
categories = ["development-tools::ffi", "development-tools::build-utils"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies.clap]
features = ["std", "env", "derive", "help"]
workspace = true
optional = true


[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[badges.maintenance]
status = "actively-developed"
