[package]
name = "playdate-bindgen"
version = "0.1.10"
readme = "README.md"
description = "Bindgen configuration for Playdate API and utils."
keywords = ["playdate", "bindings", "ffi", "code-generation"]
categories = ["development-tools::ffi", "development-tools::build-utils"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
semver.workspace = true

# parser:
html2md = { version = "0.2.14", optional = true }
html5ever = { version = "0.26.0", optional = true }
markup5ever_rcdom = { version = "0.2.0", optional = true }
# doc-gen:
proc-macro2 = { version = "1.0", optional = true }
syn = { version = "2.0", optional = true }            # +full, extra-traits, visit-mut
quote = { version = "1.0", optional = true }

log = { workspace = true, optional = true }
prettyplease = { version = "0.2", optional = true, features = ["verbatim"] }
which = { version = "6.0", optional = true, default-features = false }

utils.workspace = true
bindgen-cfg = { workspace = true, features = ["clap"] }

[dependencies.bindgen]
version = "0.69.4"
default-features = false

[dependencies.clap]
features = ["std", "env", "derive", "help", "usage", "color"]
workspace = true
optional = true


[[bin]]
path = "src/main.rs"
name = "pdbindgen"
required-features = ["cli"]


[features]
default = ["runtime", "documentation"]
documentation = ["extra-codegen", "html2md", "html5ever", "markup5ever_rcdom"]
extra-codegen = ["syn", "proc-macro2", "quote"]

# bindgen options
runtime = ["bindgen/runtime"]                            # runtime linking (dlopen)
static = ["bindgen/static"]                              # static linking to clang
logging = ["bindgen/logging", "utils/log"]
pretty-please = ["bindgen/prettyplease", "prettyplease"]
which-rustfmt = ["bindgen/which-rustfmt", "which"]

cli = [
	"clap",
	"documentation",
	"extra-codegen",
	"pretty-please",
	"which-rustfmt",
]


[package.metadata.docs.rs]
features = ["cli", "documentation", "extra-codegen"]

[badges.maintenance]
status = "actively-developed"
