[package]
name = "playdate-bindgen"
version = "0.5.1"
readme = "README.md"
description = "Preconfigured Bindgen with extra codegen for Playdate C-API."
keywords = ["playdate", "bindings", "ffi", "code-generation"]
categories = ["development-tools::ffi", "development-tools::build-utils"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
semver.workspace = true

# parser:
html5ever = { version = "0.27.0", optional = true }
markup5ever_rcdom = { version = "0.3.0", optional = true }
# html2md = { package = "html2md-rs", version = "0.10", optional = true }

# doc-gen, rustification:
convert_case = "0.8"
syn = { version = "2.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }

log = { workspace = true, optional = true }
prettyplease = { version = "0.2", optional = true, features = ["verbatim"] }
which = { version = "7.0", optional = true, default-features = false }

utils.workspace = true
bindgen-cfg = { workspace = true, features = ["clap"] }

[dependencies.bindgen]
version = "0.71.1"
default-features = false

[dependencies.clap]
features = ["std", "env", "derive", "help", "usage", "color"]
workspace = true
optional = true


[[bin]]
path = "src/main.rs"
name = "pdbindgen"
required-features = ["cli"]


[features]
default = ["runtime", "documentation"]
documentation = [
	"extra-codegen",
	"html5ever",
	"markup5ever_rcdom",
	# "html2md"
] # parse & generate doc-comments
extra-codegen = ["syn", "proc-macro2", "quote"]

# bindgen options
runtime = ["bindgen/runtime"]                              # runtime linking (dlopen)
static = ["bindgen/static"]                                # static linking to clang
logging = ["bindgen/logging", "utils/log"]
pretty = ["bindgen/prettyplease", "prettyplease"]
cli = ["clap", "documentation", "extra-codegen", "pretty"]


[package.metadata.docs.rs]
features = ["cli", "documentation", "extra-codegen"]


[lints.rust.unexpected_cfgs]
level = "deny"


[badges.maintenance]
status = "actively-developed"
