[package]
name = "playdate-gen-api-shorthands"
version = "0.1.0"
keywords = ["playdate", "bindings", "code-generation"]
edition.workspace = true
license.workspace = true
authors = ["kana <kana-github@qnet.li>"]
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
