[package]
name = "playdate-simulator-utils"
version = "0.1.3"
readme = "README.md"
description = "Cross-platform utils to deal with Playdate Simulator."
keywords = ["playdate", "sdk", "utils"]
categories = ["development-tools"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
thiserror.workspace = true
log.workspace = true
tracing = { version = "0.1", optional = true }

[dependencies.utils]
workspace = true
default-features = false

[dependencies.tokio]
features = ["process"]
default-features = false
workspace = true
optional = true

[dependencies.async-std]
features = ["futures-lite", "unstable", "default"]
workspace = true
optional = true


[features]
tokio = ["dep:tokio", "async-std?/tokio1"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--show-type-layout"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[badges.maintenance]
status = "actively-developed"
