[package]
name = "playdate-tool"
version = "0.1.0"
edition = "2021"

readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Alex Koz <a@koz.email>"]
description = "Tool for interaction with Playdate device and sim."
keywords = ["playdate", "usb"]
categories = ["development-tools", "hardware-support"]
homepage = "https://github.com/boozook/playdate"
repository = "https://github.com/boozook/playdate.git"
documentation = "https://docs.rs/playdate-bindgen"


[[bin]]
path = "src/main.rs"
name = "pdtool"
required-features = ["cli"]


[dependencies]
regex = "1"
log = "0.4"
thiserror = "1.0"

serde_json = "1.0"
plist = "1.5"


[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.env_logger]
version = "0.10"
optional = true

[dependencies.clap]
version = "4.3"
features = ["std", "env", "derive", "help", "usage", "color"]
optional = true

# used assert::env-resolver and sdk
[dependencies.playdate]
version = "0.1"
path = "../build"
package = "playdate-build"
default-features = false

[dependencies.rusb]
version = "0.9"
optional = true

[dependencies.usb-ids]
version = "1.2023.0"
optional = true


[features]
default = ["usb"]
cli = ["clap", "env_logger"]
usb = ["rusb", "usb-ids"]
