[package]
name = "playdate-tool"
version = "0.1.4"
readme = "README.md"
description = "Tool for interaction with Playdate device and sim."
keywords = ["playdate", "usb", "utility"]
categories = ["development-tools", "hardware-support"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[[bin]]
path = "src/main.rs"
name = "pdtool"
required-features = ["cli"]


[dependencies]
regex.workspace = true
log.workspace = true
env_logger = { workspace = true, optional = true }
thiserror = "1.0"

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
plist = "1.6"

rusb = { version = "0.9", optional = true }
usb-ids = { version = "1.2023.0", optional = true }

# used assert::env-resolver and sdk
build = { workspace = true, default-features = false }

[dependencies.clap]
features = ["std", "env", "derive", "help", "usage", "color"]
workspace = true
optional = true


[features]
default = ["usb"]
cli = ["clap", "env_logger"]
usb = ["rusb", "usb-ids"]
