[package]
name = "playdate-tool"
version = "0.3.0"
readme = "README.md"
description = "Tool for interaction with Playdate device and sim."
keywords = ["playdate", "usb", "utility"]
categories = ["development-tools", "hardware-support"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[[bin]]
path = "src/main.rs"
name = "pdtool"


[dependencies]
# RT, async:
tokio = { version = "1.36", features = ["full", "rt-multi-thread"] }
futures = { version = "0.3" }
futures-lite.workspace = true

# fmt:
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# CLI:
log.workspace = true
env_logger.workspace = true
thiserror.workspace = true
miette = { version = "7.2", features = ["fancy"] }

# tracing:
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
console-subscriber = { version = "0.2", features = [
	"env-filter",
], optional = true }

[dependencies.clap]
features = ["std", "env", "derive", "help", "usage", "color"]
workspace = true

# PD:
[dependencies.device]
features = ["clap", "tokio", "tokio-serial"]
workspace = true

[dependencies.simulator]
features = ["tokio"]
workspace = true


[features]
eject = ["device/eject"] # windows only, enable one more unmount method

tracing = [
	"dep:tracing",
	"tracing-subscriber",
	"device/tracing",
	"simulator/tracing",
]

# Useful with `RUSTFLAGS="--cfg tokio_unstable"` &
# [tokio-console](https://tokio.rs/tokio/topics/tracing-next-steps)
tokio-tracing = ["tracing", "tokio/tracing", "console-subscriber", "tracing"]


[package.metadata.docs.rs]
rustdoc-args = ["--show-type-layout"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
all-features = false

[badges.maintenance]
status = "actively-developed"
