[package]
name = "playdate-build-utils"
version = "0.1.3"
readme = "README.md"
description = "Utils that help to build program with Rust and Playdate API"
keywords = ["playdate", "utility"]
categories = ["development-tools::build-utils"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
dirs.workspace = true
log = { workspace = true, optional = true }


[features]
default = ["log", "cargo-message"]
cargo-message = []                 # cargo notifications & warnings and logging
