[package]
name = "playdate-build-utils"
version = "0.2.42"
readme = "README.md"
description = "Utils that help to build program with Rust and Playdate API"
keywords = ["playdate", "utility"]
categories = ["development-tools::build-utils"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
dirs.workspace = true
log = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies.windows-registry]
version = "0.1.0"

[features]
default = ["log", "cargo-message"]
cargo-message = []                 # cargo notifications & warnings and logging


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--show-type-layout"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[badges.maintenance]
status = "actively-developed"
