#:schema ../../../../cargo-playdate.json

[workspace]
resolver = "2"
members = ["sub"]


[package]
name = "test-workspace-main-crate"
version = "0.1.0"
edition = "2021"
publish = false


[package.metadata.playdate]
bundle-id = "test.workspace.main.crate"
# description = "test"

[package.metadata.playdate.assets]
"main/" = "Cargo.toml"
# options.method = "link"
# options.overwrite = true
# options.dependencies = true
[package.metadata.playdate.assets.options]
# # [package.metadata.playdate.options]
# # [package.metadata.playdate.options.assets]
dependencies = true
overwrite = true



[lib]
path = "../simple/lib.rs"
crate-type = ["dylib", "staticlib"]

[[bin]]
name = "main-bin"
path = "bin.rs"


[dependencies.sub]
package = "test-workspace-sub-crate"
path = "sub"

[dependencies.pd]
package = "playdate-sys"
path = "../../../../api/sys"


[profile.dev]
panic = "abort"


[profile.release]
panic = "abort"
opt-level = "s"         # optimize for binary size (mb. use 3)
overflow-checks = false # Runtime integer overflow checks. (TODO: false)
lto = "fat"
incremental = false
codegen-units = 1

debug = 0
strip = "debuginfo"      # or symbols, for bin
debug-assertions = false
